--- a/pages/chatter.mdx
+++ b/pages/chatter.mdx
@@ -29,7 +29,7 @@ import Image from 'next/image';
 
 # About this demo
 
-The two chat clients connecting to an Elixir backend via Websockets. The backend is setup with an Load balancer, so each chat client connects to 
+The two chat clients connect to an Elixir backend via Websockets. The backend is setup with an Load balancer, so each chat client connects to 
 different backend machines. You can see the **IP address** of the connected machine in the top right of the client (you might need to refresh the page to get two separate 
 machine IPs). Using a message broker, RabbitMQ, these separate Elixir nodes are able to receive messages that come into any of the Elixir nodes.
 
